Update name in gitconfig

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,7 +1,7 @@
 [init]
 	defaultbranch = main
 [user]
-	name = EnhancedProtection
+	name = Saurabh
 	email = 65000076+EnhancedProtection@users.noreply.github.com
 [push]
 	default = current
